igt@xe_exec_sip* - fail - Test assertion failure function test_sip, Failed assertion: igt_nsec_elapsed(&ts) < timeout
Starting dynamic subtest: DRM_XE_ENGINE_CLASS_COMPUTE0
(xe_exec_sip:2187) CRITICAL: Test assertion failure function test_sip, file ../tests/intel/xe_exec_sip.c:289:
(xe_exec_sip:2187) CRITICAL: Failed assertion: igt_nsec_elapsed(&ts) < timeout
(xe_exec_sip:2187) CRITICAL: error: 0x240a3bfd3 >= 0x218711a00
Dynamic subtest DRM_XE_ENGINE_CLASS_COMPUTE0 failed.
**** DEBUG ****
(xe_exec_sip:2187) DEBUG: Using DRM_XE_ENGINE_CLASS_COMPUTE
(xe_exec_sip:2187) drmtest-DEBUG: Force option used: Using driver xe
(xe_exec_sip:2187) drmtest-DEBUG: Opened previously opened device: /dev/dri/card0
(xe_exec_sip:2187) drmtest-DEBUG: Test requirement passed: !(fd<0)
(xe_exec_sip:2187) intel_allocator_simple-DEBUG: Using simple allocator
(xe_exec_sip:2187) intel_bufops-DEBUG: generation: 20, supported tiles: 0x3f, driver: xe
(xe_exec_sip:2187) gpgpu_shader-DEBUG: Test requirement passed: shdr->gen_ver >= SUPPORTED_GEN_VER