tests/xe_exec_sip: skip invalid instruction in SIP routine

Exception handler (SIP) should skip invalid instruction,
ie after return from SIP IP should point to the next instruction.
Otherwise we risk undefined behavior.

Closes: https://gitlab.freedesktop.org/drm/xe/kernel/-/issues/2977
Signed-off-by: Andrzej Hajda <andrzej.hajda@intel.com>
Reviewed-by: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>